<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4D8B2"
    tools:context=".Hoteles">


    <ImageView
        android:id="@+id/bannerhoteles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/hotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulohomehoteles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulohomehoteles"
        android:textAlignment="center"
        android:textColor="@color/indianred"
        android:textSize="31dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannerhoteles"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/Descripcionhoteles"
        android:layout_width="390dp"
        android:layout_height="177dp"
        android:text="@string/descripcionhomehoteles"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulohomehoteles"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/manohoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mano"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Descripcionhoteles"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/botonhomehoteles"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/burlywood"
        android:text="@string/botonhomehoteles"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@id/manohoteles"
        app:layout_constraintTop_toBottomOf="@id/Descripcionhoteles"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>