<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/antiquewhite"
    tools:context=".Home">

    <ImageView
        android:id="@+id/iconohome"
        android:layout_width="145dp"
        android:layout_height="132dp"
        android:src="@drawable/cascada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/titulohome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Concepción Antioquia"
        android:textColor="@color/rosybrown"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconohome"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/botonhoteles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titulohome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginHorizontal="28dp"
        android:backgroundTint="@color/burlywood"
        android:text="@string/hoteles"
        android:textColor="@color/black"

        />

    <Button
        android:id="@+id/botonrestaurantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botonhoteles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="28dp"
        android:backgroundTint="@color/burlywood"
        android:text="@string/restaurantes"
        android:textColor="@color/black"

        />
    <Button
        android:id="@+id/botonsitios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botonrestaurantes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="28dp"
        android:backgroundTint="@color/burlywood"
        android:text="@string/sitios"
        android:textColor="@color/black"

        />
</androidx.constraintlayout.widget.ConstraintLayout>